criando telas de admin e vitrine

--- a/src/NerdStore.WebApp.MVC/Views/_ViewImports.cshtml
+++ b/src/NerdStore.WebApp.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using NerdStore.WebApp.MVC
-@namespace NerdStore.WebApp.MVC.Pages
+@using NerdStore.WebApp.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
